# tapa

./: .gitignore  LICENSE  README.md  index.html  picker.html  pyproject.toml  summary_fricatives.csv  summary_stops.csv  summary_vowel_counts.csv  t1_compact.html  t2_card.html  t3_dense.html  t4_editorial.html  t5_paper.html
palette_preview/: compare.html
tapa/: __init__.py  alignment.py  cli.py  config.py  consonants.py  diarization.py  download.py  drvot.py  io.py  phoneme_maps.py  pipeline.py  segments.py  shortcuts.py  statistics.py  transcription.py  vowels.py
